# Tesseract-omp

./: CMakeLists.txt  README.md  f.cpp  lineParallelIter.cpp
